# twitchy-mcbotface

./: .gitignore  Cargo.toml  justfile
assets/: standby-background.aseprite
crates/: justfile
crates/face/: Cargo.toml
crates/face/src/: error.rs  main.rs
crates/face/src/bevy_ui/: chatbox.rs  mod.rs
crates/router/: Cargo.toml  build.rs
crates/router/.cargo/: config.toml
crates/router/proto/: twitch.proto
crates/router/src/: error.rs  irc.rs  lib.rs  main.rs  router.rs
crates/router/src/pb/: mod.rs  twitch.rs
crates/twiymcbof-face/: Cargo.toml
crates/twiymcbof-face/src/: error.rs  irc.rs  main.rs
crates/twiymcbof-router/: Cargo.toml
crates/twiymcbof-router/src/: commander.rs  error.rs  lib.rs
src/: commander.rs  error.rs  irc.rs  lib.rs  main.rs  ndi.rs
src/bevy_ui/: chatbox.rs  mod.rs
src/egui_ui/: chatbox.rs  event_loop.rs  mod.rs
