[package]
name = "twitchy-mcbotface"
version = "0.1.0"
edition = "2021"

[lib]
name = "tmbf"
path = "src/lib.rs"

[[bin]]
name = "twitchy-mcbotface"
path = "src/main.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]

thiserror = "~1.0"

glow = "0.11"
egui_glow = { version = "0.23.0", features = [ "winit" ] }
winit = "0.28"

egui = { version = "0.23.0", default-features = true, features = ["bytemuck"] }
epaint = "0.23.0"
emath = "0.23.0"
egui_extras = "0.23.0"

bevy = "0.12"
bevy_egui = "0.23"
bevy_image_export = { path = "/home/wayne/projects/bevy_render_to_image" }

ndi-sdk = { path = "/home/wayne/projects/rust-ndi" }
image = "~0.24"

twitch-irc = { version = "~4.0", features = [ "with-serde" ] }

tokio = { version = "~1.17", features = [
  "rt-multi-thread",
  "rt",
] }
futures = "~0.3"
lock_api = "~0.4"

# config serialization/deserialization
serde_yaml = "0.8"

unicode-segmentation = "~1.9"
