[package]
name = "twitchy-mcbotface"
version = "0.1.0"
edition = "2021"

[lib]
name = "tmbf"
path = "src/lib.rs"

[[bin]]
name = "twitchy-mcbotface"
path = "src/main.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]

thiserror = "~1.0"

bevy = "0.12"
winit = "0.28"

# provides NDIExportPlugin
bevy_image_export = { path = "/home/wayne/projects/bevy_render_to_image" }

image = "~0.24"

twitch-irc = { version = "~4.0", features = [ "with-serde" ] }

tokio = { version = "~1.17", features = [
  "rt-multi-thread",
  "rt",
] }
futures = "~0.3"

# config serialization/deserialization
serde_yaml = "0.8"

unicode-segmentation = "~1.9"
