[package]
name = "twiymcbof"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "twiymcbof"
path = "src/main.rs"

[dependencies]

thiserror = "~1.0"

bevy = "0.12"
winit = "0.28"

# provides NDIExportPlugin
bevy_image_export = { path = "/home/wayne/projects/bevy_render_to_image" }

image = "~0.24"

twitch-irc = { version = "~4.0", features = [ "with-serde" ] }

tokio = { version = "~1.17", features = [
  "rt-multi-thread",
  "rt",
] }
futures = "~0.3"

# config serialization/deserialization
serde_yaml = "0.8"

unicode-segmentation = "~1.9"
