[package]
name = "face"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "face"
path = "src/main.rs"

[dependencies]

router = { path = "../router" }

thiserror = "~1.0"

bevy = "0.12"
winit = "0.28"

# provides NDIExportPlugin
bevy_image_export = { path = "/home/wayne/projects/bevy_render_to_image" }

image = "~0.24"

twitch-irc = { version = "~4.0", features = [ "with-serde" ] }

tokio = { version = "~1.17", features = [
  "rt-multi-thread",
  "rt",
] }
tokio-stream = "0.1"
futures = "~0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# config serialization/deserialization
serde_yaml = "0.8"

unicode-segmentation = "~1.9"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
